--- a/quotegenerator.css
+++ b/quotegenerator.css
@@ -1,6 +1,9 @@
 html {
   font-size: 14px;
 }
+body{
+ background: url(../img/tree-animated-gif-3.gif) 
+}
 
 @include media-breakpoint-up(sm) {
   html {
